apps/dev-team-a/devsecops-demo-app/overlays/prod/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-app-devsecops-lab-app
spec:
  ports:
    - port: 5000
      nodePort: 30001
      name: http
